--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
     background-size: cover;
     background: url(https://images5.alphacoders.com/133/1338177.png);
     display: flex;
+    flex-direction: column; /* Alinhamento vertical */
     justify-content: center;
     align-items: center;
 }
@@ -15,10 +16,8 @@ body {
     border-radius: 10px;
     text-align: center;
     margin: auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    justify-content: center;
+    align-items: center;
 }
 
 .search-bar {
@@ -49,12 +48,6 @@ body {
     background-color: #005a9e;
 }
 
-.results {
-    text-align: center;
-    margin-top: 700px;
-    width: 500px;
-   
-}
 
 .result-card {
     display: flex;
@@ -62,16 +55,17 @@ body {
     align-items: center;
     flex-direction: column;
     margin-bottom: 20px;
-    border: 1px solid #ddd;
+    border: none;
     border-radius: 8px;
-    overflow: hidden;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    filter: blur(0.5);
     font-family: sans-serif;
     font-style: italic;
-    background: rgb(25, 19, 16);
-    background: linear-gradient(90deg, rgba(25, 19, 16, 0.719) 0%, rgba(42, 18, 11, 0.753) 100%);
+    /* background: rgb(25, 19, 16);
+    background: linear-gradient(90deg, rgba(25, 19, 16, 0.719) 0%, rgba(42, 18, 11, 0.753) 100%); */
+    width: 400px;
+    margin-right: 10px;
+    margin: 0 auto;
 }
 
 .result-card img {
@@ -80,6 +74,8 @@ body {
     object-fit: cover;
     margin-bottom: 10px;
     border-radius: 10px;
+    animation: none;
+
 }
 
 .result-card .info {
@@ -103,8 +99,8 @@ body {
 }
 
 .card {
-    width: 20em;
-    height: 35em;
+    width: 100%;
+    border: 1px solid white;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -116,57 +112,41 @@ body {
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin-top: -150px;
+    /* position: relative; */
+    background: rgba(23, 23, 23, 0.837);
+    margin-bottom: 40px; /* Espaçamento ajustado */
+}
+
+.card-cima {
+    width: 20em;
+    margin: 0 auto;
+    /* height: 35em; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-family: Montserrat;
+    font-weight: bold;
+    padding: 1em 2em 1em 1em;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    /* position: relative; */
+    background: rgb(23, 23, 23, 0.7);
+    margin-bottom: 40px; /* Espaçamento ajustado */
+    /* margin-left: 400px; */
 }
 
 .card img {
     width: 12em;
     margin-right: 1em;
     animation: move 10s ease-in-out infinite;
-    z-index: 5;
 }
 
 .image:hover {
     cursor: -webkit-grab;
     cursor: grab;
-}
-
-.icons svg {
-    width: 20px;
-    height: 20px;
-}
-
-.card::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    inset: -3px;
-    border-radius: 10px;
-    background: radial-gradient(#858585, transparent, transparent);
-    transform: translate(-5px, 250px);
-    transition: 0.4s ease-in-out;
-    z-index: -1;
-}
-
-.card:hover::before {
-    width: 150%;
-    height: 100%;
-    margin-left: -4.25em;
-}
-
-.card::after {
-    content: "";
-    position: absolute;
-    inset: 2px;
-    border-radius: 20px;
-    background: rgb(23, 23, 23, 0.7);
-    transition: all 0.4s ease-in-out;
-    z-index: -1;
 }
 
 .heading {
@@ -196,49 +176,6 @@ body {
     animation-delay: 0s;
 }
 
-.icons::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 2px;
-    height: 2px;
-    border-radius: 50%;
-    opacity: 1;
-    box-shadow: 140px 20px #fff, 425px 20px #fff, 70px 120px #fff, 20px 130px #fff,
-        110px 80px #fff, 280px 80px #fff, 250px 350px #fff, 280px 230px #fff,
-        220px 190px #fff, 450px 100px #fff, 380px 80px #fff, 520px 50px #fff;
-    z-index: -1;
-    transition: 1.5s ease;
-    animation: 1s glowing-stars linear alternate infinite;
-    animation-delay: 0.4s;
-}
-
-.icons::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 2px;
-    height: 2px;
-    border-radius: 50%;
-    opacity: 1;
-    box-shadow: 490px 330px #fff, 420px 300px #fff, 320px 280px #fff,
-        380px 350px #fff, 546px 170px #fff, 420px 180px #fff, 370px 150px #fff,
-        200px 250px #fff, 80px 20px #fff, 190px 50px #fff, 270px 20px #fff,
-        120px 230px #fff, 350px -1px #fff, 150px 369px #fff;
-    z-index: -1;
-    transition: 2s ease;
-    animation: 1s glowing-stars linear alternate infinite;
-    animation-delay: 0.8s;
-}
-
-.card:hover .heading::before,
-.card:hover .icons::before,
-.card:hover .icons::after {
-    filter: blur(3px);
-}
-
 .image:active {
     cursor: -webkit-grabbing;
     cursor: grabbing;
@@ -256,35 +193,6 @@ body {
     height: 0.45em;
     scale: 0.65;
     transform: translateX(9em) translateY(1em);
-}
-
-.image:active~.icons::before {
-    box-shadow: 262px 35px #9b40fc, 262px 30px #9b40fc, 262px 25px #9b40fc,
-        262px 20px #9b40fc, 275px 20px #9b40fc, 275px 24px #9b40fc,
-        275px 28px #9b40fc, 275px 32px #9b40fc, 275px 36px #9b40fc,
-        275px 40px #9b40fc, 275px 44px #9b40fc, 275px 48px #9b40fc;
-    animation: none;
-    filter: blur(0);
-    border-radius: 2px;
-    width: 0.45em;
-    height: 0.45em;
-    scale: 0.65;
-    transform: translateX(9em) translateY(1em);
-}
-
-.image:active~.icons::after {
-    box-shadow: 238px 60px #9b40fc, 242px 60px #9b40fc, 246px 60px #9b40fc,
-        250px 60px #9b40fc, 254px 60px #9b40fc, 258px 60px #9b40fc,
-        262px 60px #9b40fc, 266px 60px #9b40fc, 270px 60px #9b40fc,
-        274px 60px #9b40fc, 278px 60px #9b40fc, 282px 60px #9b40fc,
-        234px 60px #9b40fc, 234px 60px #9b40fc;
-    animation: none;
-    filter: blur(0);
-    border-radius: 2px;
-    width: 0.45em;
-    height: 0.45em;
-    scale: 0.65;
-    transform: translateX(9em) translateY(1.25em);
 }
 
 .heading::after {
@@ -307,132 +215,6 @@ body {
 .card:hover .heading::after {
     box-shadow: 0px 0px 200px rgba(193, 119, 241, 1),
         0px 0px 200px rgba(135, 42, 211, 1), inset #9b40fc 0px 0px 40px -12px;
-}
-
-.icons {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    column-gap: 1em;
-    z-index: 1;
-}
-
-.instagram,
-.x,
-.discord {
-    position: relative;
-    transition: 0.4s ease-in-out;
-}
-
-.instagram:after,
-.x:after,
-.discord:after {
-    content: "";
-    position: absolute;
-    width: 0.5em;
-    height: 0.5em;
-    left: 0;
-    background-color: white;
-    box-shadow: 0px 0px 10px rgba(233, 233, 233, 0.5),
-        0px 0px 10px rgba(192, 192, 192, 0.5);
-    border-radius: 50%;
-    z-index: -1;
-    transition: 0.3s ease-in-out;
-}
-
-.instagram svg path,
-.x svg path,
-.discord svg path {
-    stroke: #808080;
-    transition: 0.4s ease-in-out;
-}
-
-.instagram:hover svg path {
-    stroke: #cc39a4;
-}
-
-.x:hover svg path {
-    stroke: black;
-}
-
-.discord:hover svg path {
-    stroke: #8c9eff;
-}
-
-.instagram svg,
-.x svg,
-.discord svg {
-    transition: 0.3s ease-in-out;
-}
-
-.instagram:hover svg {
-    scale: 1.4;
-}
-
-.x:hover svg,
-.discord:hover svg {
-    scale: 1.25;
-}
-
-.instagram:hover:after,
-.x:hover:after,
-.discord:hover:after {
-    scale: 4;
-    transform: translateX(0.09em) translateY(0.09em);
-}
-
-.instagram::before {
-    content: "";
-    position: absolute;
-    top: -700%;
-    left: 1050%;
-    rotate: -45deg;
-    width: 5em;
-    height: 1px;
-    background: linear-gradient(90deg, #ffffff, transparent);
-    animation: 4s shootingStar ease-in-out infinite;
-    transition: 1s ease;
-    animation-delay: 1s;
-}
-
-.x::before {
-    content: "";
-    position: absolute;
-    top: -1300%;
-    left: 850%;
-    rotate: -45deg;
-    width: 5em;
-    height: 1px;
-    background: linear-gradient(90deg, #ffffff, transparent);
-    animation: 4s shootingStar ease-in-out infinite;
-    animation-delay: 3s;
-}
-
-.discord::before {
-    content: "";
-    position: absolute;
-    top: -2100%;
-    left: 850%;
-    rotate: -45deg;
-    width: 5em;
-    height: 1px;
-    background: linear-gradient(90deg, #ffffff, transparent);
-    animation: 4s shootingStar ease-in-out infinite;
-    animation-delay: 5s;
-}
-
-.card:hover .instagram::before,
-.card:hover .x::before,
-.card:hover .discord::before {
-    filter: blur(3px);
-}
-
-.image:active~.icons .instagram::before,
-.image:active~.icons .x::before,
-.image:active~.icons .discord::before {
-    animation: none;
-    opacity: 0;
 }
 
 @keyframes shootingStar {
